bug fixes for paged searches
bug fixes for pagination to enable paged searches to be done.
url removed from pagination component.

--- a/lib/typst_reporter_web/live/report_live/index.html.heex
+++ b/lib/typst_reporter_web/live/report_live/index.html.heex
@@ -45,8 +45,8 @@
 
 <!-- this is for pagination -->
 <!--this is for a sample pagination page -->
-<div class="flex mx-auto items-center justify-center">
-  <.paginate url="/reports" page={@page_data.cpage} next_page_show={@page_data.next_page_show} />  
+<div class="flex mx-auto items-center justify-center mt-5">
+  <.paginate page={@page_data.cpage} next_page_show={@page_data.next_page_show} />  
 </div>
 
 
