table function component  done
hex function component for creating table completed.
hex function component added to live view.

--- a/lib/typst_reporter_web/live/report_live/index.html.heex
+++ b/lib/typst_reporter_web/live/report_live/index.html.heex
@@ -59,6 +59,11 @@
       {@report.title}
       <:subtitle></:subtitle>
     </.header>
+    <%= if @type_preview == "ok" do %>
+    <.table_custom id="preview_table" rows={@result_query.rows} col={@result_query.columns} />
+    <% else  %>
+    error running query.please check query.
+    <% end %>
   </div>
 </.modal>
 
